--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -1,1 +1,16 @@
 /* здесь используйте глобальные переменные */
+$AbsoluteWhite: #ffffff;
+$Grey90: #e6e6e6;
+$Gray60: #98989a;
+$Grey20: #333333;
+$Gray15: #262626;
+$Grey10: #1a1a1a;
+$Green99: #fdfffa;
+$Green50: #9eff00;
+$Green80: #d8ff99;
+
+
+$DarkBlur: rgba(36, 36, 36, 0.2);
+$Blur: blur(6px);
+$Gradient: linear-gradient(210deg, rgba(158, 255, 0, 0.05) 3%, rgba(36, 36, 36, 0) 100%);
+$Border-gradient: linear-gradient(rgba(158, 255, 0, 0.05) 3%, rgba(36, 36, 36, 1) 100%) 0 0 / 100% 100% no-repeat;
