--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -5,3 +5,9 @@
 
 /* BLOCKS */
 @import "./blocks/header.scss";
+@import "./blocks/button.scss";
+@import "./blocks/hero.scss";
+@import "./blocks/partners.scss";
+@import "./blocks/services.scss";
+@import "./blocks/advantages.scss";
+@import "./blocks/reviews.scss";
