--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -1,5 +1,50 @@
 .header {
-  background-color: #663399;
-  color: #ffffff;
-  padding: 10px 15px;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: center;
+  border-bottom: 1px solid $Gray15;
+  position: fixed;
+  z-index: 9;
+  top: 0;
+  left: 0;
+  background-color: $Grey10;
+}
+.page-navigation {
+  max-width: 98rem;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.25rem 1rem;
+}
+.page-navigation__logo {
+  display: block;
+  max-width: 11rem;
+  height: auto;
+}
+.page-navigation__list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+}
+.page-navigation__item {
+  list-style-type: none;
+  display: block;
+
+}
+.page-navigation__link {
+  padding: 0.88rem 1.75rem;
+  display: block;
+  border-radius: 0.5rem;
+  color: $AbsoluteWhite;
+  text-decoration: none;
+  transition: all 0.4s ease-in;
+
+  &:hover {
+    background-color: $Gray15;
+  }
 }
